// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreter-evaluation short-circuit-constant-init-and should fail compilation 1`] = `
"<unknown>:4:35: Cannot evaluate expression to a constant: divisor expression must be non-zero
  3 | 
> 4 | const A: Bool = true && exception(0);
                                        ^
  5 | 
"
`;

exports[`interpreter-evaluation short-circuit-constant-init-or should fail compilation 1`] = `
"<unknown>:4:36: Cannot evaluate expression to a constant: divisor expression must be non-zero
  3 | 
> 4 | const A: Bool = false || exception(0);
                                         ^
  5 | 
"
`;

exports[`interpreter-evaluation short-circuit-contract-constant-init-and should fail compilation 1`] = `
"<unknown>:12:39: Cannot evaluate expression to a constant: divisor expression must be non-zero
  11 | contract CTest {
> 12 |     const A: Bool = true && exception(0);
                                             ^
  13 | }
"
`;

exports[`interpreter-evaluation short-circuit-contract-constant-init-or should fail compilation 1`] = `
"<unknown>:12:40: Cannot evaluate expression to a constant: divisor expression must be non-zero
  11 | contract CTest {
> 12 |     const A: Bool = false || exception(0);
                                              ^
  13 | }
"
`;

exports[`interpreter-evaluation short-circuit-contract-init-and should fail compilation 1`] = `
"<unknown>:12:33: Cannot evaluate expression to a constant: divisor expression must be non-zero
  11 | contract CTest {
> 12 |     A: Bool = true && exception(0);
                                       ^
  13 | }
"
`;

exports[`interpreter-evaluation short-circuit-contract-init-or should fail compilation 1`] = `
"<unknown>:12:34: Cannot evaluate expression to a constant: divisor expression must be non-zero
  11 | contract CTest {
> 12 |     A: Bool = false || exception(0);
                                        ^
  13 | }
"
`;

exports[`interpreter-evaluation short-circuit-struct-init-and should fail compilation 1`] = `
"<unknown>:5:33: Cannot evaluate expression to a constant: divisor expression must be non-zero
  4 | struct STest {
> 5 |     A: Bool = true && exception(0);
                                      ^
  6 | }
"
`;

exports[`interpreter-evaluation short-circuit-struct-init-or should fail compilation 1`] = `
"<unknown>:5:34: Cannot evaluate expression to a constant: divisor expression must be non-zero
  4 | struct STest {
> 5 |     A: Bool = false || exception(0);
                                       ^
  6 | }
"
`;

exports[`interpreter-evaluation stack-deepness-big-input should fail compilation 1`] = `
"<unknown>:3:16: Cannot evaluate expression to a constant: execution stack reached maximum allowed deepness
  2 | 
> 3 | const A: Int = multiplyByTwo(1000);
                     ^~~~~~~~~~~~~~~~~~~
  4 | 
"
`;

exports[`interpreter-evaluation stack-deepness-deep-call should fail compilation 1`] = `
"<unknown>:3:16: Cannot evaluate expression to a constant: execution stack reached maximum allowed deepness
  2 | 
> 3 | const A: Int = multiplyByTwoDeepBlocks(1000);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  4 | 
"
`;

exports[`interpreter-evaluation stack-deepness-infinite-recursion should fail compilation 1`] = `
"<unknown>:3:16: Cannot evaluate expression to a constant: execution stack reached maximum allowed deepness
  2 | 
> 3 | const A: Int = recurse();
                     ^~~~~~~~~
  4 | 
"
`;
